# SPYC-STEM-Discord.py-Bot

./: .README  .gitignore  README.md  SpycAPI.py  bot.py  classroom.py  config.json  env.py  explanation.md  l4.json  pyproject.toml  timetable.py  token.json
